updating tests